--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "react-clock": "^3.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-timer-hook": "^2.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "react-timer-hook": "^2.0.2",
   },
   "scripts": {
     "start": "react-scripts start",
