--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
-    "react-timer-hook": "^2.0.2",
+    "react-timer-hook": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
